pipeline pvc fixed for multiple language update

--- a/pipeline/nationalparks-triggers.yaml
+++ b/pipeline/nationalparks-triggers.yaml
@@ -32,7 +32,7 @@ spec:
         workspaces:
         - name: app-source
           persistentVolumeClaim:
-            claimName: app-source-pvc
+            claimName: app-source-pvc-java
         - name: maven-settings
           emptyDir: {}
 ---
