pipeline name fixed

--- a/pipeline/nationalparks-triggers.yaml
+++ b/pipeline/nationalparks-triggers.yaml
@@ -16,7 +16,7 @@ spec:
       kind: PipelineRun
       metadata:
         labels:
-          tekton.dev/pipeline: nationalparks-pipeline
+          tekton.dev/pipeline: nationalparks-java-pipeline
         name: nationalparks-deploy-$(uid)
       spec:
         params:
@@ -28,7 +28,7 @@ spec:
           - name: APP_GIT_REVISION
             value: $(tt.params.git-revision)
         pipelineRef:
-          name: nationalparks-pipeline
+          name: nationalparks-java-pipeline
         workspaces:
         - name: app-source
           persistentVolumeClaim:
